# misis2023f-23-01-stepanova-a-v

./: Project6.sln  status.md  vvedenie v specialnost'
prj.codeforces/: 0004a.cpp  0263a.cpp  1330A.cpp  1330a.cpp  1717B  1721B  1873c.cpp  271a.cpp  276a.cpp  4A  617A  978A  CMakeLists.txt  kakashechka  main.cpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.test/: doctest.h  test_complex.cpp  test_dynarr.cpp  test_rational.cpp
